# nexus

./: .gitmodules  Cargo.toml  Justfile  README.md  build.rs  rust-toolchain.toml  taplo.toml
.github/workflows/: ci.yml  publish.yml
examples/: esdb_source.toml
proto/: acceptor.proto  es-event.proto
src/: build_info.rs  http.rs  lib.rs  main.rs  metrics.rs
src/cli/: cpu_count.rs  http.rs  mod.rs  nexus.rs  show-disk-queue-length.rs  show_disk_queue_length.rs
src/conditions/: check_fields.rs  is_log.rs  is_metric.rs  remap.rs
src/config/: unit_test.rs  watcher.rs
src/event/: cloud_event.rs  log_event.rs  metric.rs  mod.rs  value.rs
src/event/lookup/: test.rs
src/internal_events/: file.rs  mod.rs  splunk_hec.rs
src/sinks/: aws_cloudwatch_metrics.rs  aws_kinesis_firehose.rs  aws_kinesis_streams.rs  aws_s3.rs  azure_monitor_logs.rs  blackhole.rs  console.rs  elasticsearch.rs  http.rs  kafka.rs  logdna.rs  mod.rs  nats.rs  splunk_hec.rs  vector.rs
src/sinks/aws_cloudwatch_logs/: mod.rs
src/sinks/datadog/: logs.rs  metrics.rs
src/sinks/file/: mod.rs
src/sinks/gcp/: cloud_storage.rs  mod.rs  pubsub.rs  stackdriver_logs.rs  stackdriver_metrics.rs
src/sinks/humio/: logs.rs  metrics.rs
src/sinks/influxdb/: logs.rs  metrics.rs
src/sinks/prometheus/: exporter.rs  remote_write.rs
src/sinks/util/: http.rs  retries.rs  sink.rs  tcp.rs
src/sinks/util/adaptive_concurrency/: controller.rs  service.rs
src/sinks/util/buffer/: compression.rs
src/sinks/util/encoding/: config.rs  mod.rs
src/sources/: file.rs  http.rs  internal_logs.rs  internal_metrics.rs  journald.rs  mod.rs  stdin.rs  syslog.rs
src/sources/eventstoredb/: mod.rs  types.rs
src/sources/socket/: mod.rs
src/sources/util/: http.rs  mod.rs
src/tls/: incoming.rs  mod.rs
src/topology/: fanout.rs  mod.rs
src/transforms/: add_fields.rs  add_tags.rs  ansi_stripper.rs  aws_cloudwatch_logs_subscription_parser.rs  coercer.rs  concat.rs  dedupe.rs  field_filter.rs  filter.rs  grok_parser.rs  json_parser.rs  log_to_metric.rs  logfmt_parser.rs  merge.rs  metric_to_log.rs  mod.rs  regex_parser.rs  remap.rs  remove_fields.rs  remove_tags.rs  rename_fields.rs  sampler.rs  split.rs  swimlanes.rs  tag_cardinality_limit.rs  tokenizer.rs
src/transforms/lua/: mod.rs
src/transforms/lua/v1/: mod.rs
src/transforms/lua/v2/: mod.rs
src/transforms/lua/v2/interop/: cloud_event.rs  event.rs  mod.rs  util.rs
src/transforms/reduce/: mod.rs
src/transforms/util/: mod.rs
src/vector/: mod.rs
src/vector/app/: mod.rs
src/vector/sinks/: metrics.rs
src/vector/sources/: mod.rs
src/vector/sources/disks/: disk_queue_length.rs  mod.rs
src/vector/sources/eventstoredb/: cluster.rs  eventstoredb.rs  metrics.rs  mod.rs  types.rs
