[package]
name = "nexus"
version = "0.1.0"
authors = ["Yorick Laupa <yorick.laupa@eventstore.com>"]
edition = "2018"


[dependencies]
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.13"
inventory = "0.1.10"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
structopt = "0.3.21"
tokio = { version = "1.4.0", features = ["full"] }
toml = "0.5.8"
typetag = "0.1.6"
tracing = "*"
# If these features aren't specified, there are currently errors compiling Vector
tracing-log = { version = "*", features = ["log-tracer"] }
tracing-subscriber = { version = "0.2.20", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
http = "0.2"
metrics = { version = "0.17.0", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.5", default-features = false, features = ["net", "sync"] }
hyper = { version = "0.14.10", default-features = false, features = ["stream"] }
hyper-openssl = { version = "0.9.1", default-features = false, features = ["tcp"]}
regex = "1.5.4"

[dependencies.vector]
git = "https://github.com/vectordotdev/vector.git"
rev = "d72c6e75891bc972111c7681fc5d0da44b9a8502"
default-features = false
features = [ "sources", "sinks", "transforms", "unix" ]

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus"
path = "src/cli/nexus.rs"

[[bin]]
name = "show-disk-queue-length"
path = "src/cli/show-disk-queue-length.rs"
