[package]
authors = [
  "Yorick Laupa <yorick.laupa@eventstore.com>",
  "Tim Simpson <tim.simpson@eventstore.com>",
]
edition = "2018"
name = "nexus"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[dependencies]
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.13"
http = "0.2"
hyper = { version = "0.14.10", default-features = false, features = ["stream"] }
hyper-openssl = { version = "0.9.1", default-features = false, features = [
  "tcp",
] }
inventory = "0.1.10"
metrics = { version = "0.16.0", default-features = false, features = ['std'] }
num_cpus = "1.13.0"
regex = "1.5.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
structopt = "0.3.21"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = { version = "0.1.5", default-features = false, features = [
  "net",
  "sync",
] }
toml = "0.5.8"
tracing = "0.1.25"
typetag = "0.1.6"

[dependencies.stackdriver-metrics]
git = "https://github.com/TimSimpson/stackdriver-metrics-rs.git"
rev = "3c31fb868b66112d02b9e37d0235662fe92d7bc9"

[dependencies.vector]
default-features = false
features = [
  "transforms",
  "unix",

  # sources
  "sources-file",
  "sources-fluent",
  "sources-demo_logs",
  "sources-http",
  "sources-internal_logs",
  "sources-socket",
  "sources-vector",
  "sources-host_metrics",
  "sources-internal_metrics",

  # sinks
  "sinks-aws_cloudwatch_logs",
  "sinks-console",
  "sinks-file",
  "sinks-gcp",
  "sinks-socket",
  "sinks-vector",
  "sinks-aws_cloudwatch_metrics",
  "sinks-prometheus",
]
git = "https://github.com/vectordotdev/vector.git" # v0.18.1
rev = "c4adb607fad7f3dce6f3ee1e29525fd7585d0382"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
built = { version = "0.5", features = ["git2", "chrono"] }
